--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.center {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.main {
+  margin-top: 200px;
+  position: relative;
+}
+.main-conatiner {
+  position: relative;
+}
+.hover-element {
+  display: inline-block;
+  font-size: 1.5em;
+  color: grey;
+  position: relative;
+}
+p {
+  border-bottom: 2px dotted grey;
+}
+
+.tool-tip {
+  font-size: 0.6em;
+  color: white;
+  background-color: black;
+  border-radius: 10px;
+  padding: 5px;
+  width: 150px;
+  height: 40px;
+}
+.hover-container {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  text-align: center;
+  position: absolute;
+}
+.container-right {
+  margin-left: 150px;
+  margin-top: -60px;
+}
+.container-left {
+  flex-direction: row-reverse;
+  margin-left: -180px;
+  margin-top: -60px;
+}
+.container-top {
+  flex-direction: column-reverse;
+  margin-top: -120px;
+}
+.container-bottom {
+  flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+.icon {
+  border-color: transparent black transparent transparent;
+  border-style: solid;
+  border-width: 10px;
+  height: 0px;
+  width: 0px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.right {
+  rotate: 0deg;
+}
+.bottom {
+  margin-top: -30px;
+  rotate: 90deg;
+}
+.left {
+  rotate: 180deg;
+}
+.top {
+  rotate: 270deg;
 }
